# wengine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/gfx-example/: CMakeLists.txt  gfx-engine-example.cpp  gfx-example-anisotropy.cpp  gfx-example-msaa.cpp  gfx-example-sample-shading.cpp  gfx-example-sampler.cpp  gfx-example.cpp
config/: CMakeLists.txt  engine.json
include/common/: common.h  config.h  constants.h  logger.h  math.h  owned-resources.h  owned_resources.h  singleton.h
include/engine/: engine.h  material.h  mesh-component.h  mesh.h  scene-navigator.h  scene-renderer.h  texture.h
include/gfx/: command-buffer.h  draw-command.h  gfx-buffer.h  gfx-constants.h  gfx-pipeline.h  gfx.h  image.h  mesh.h  render-target.h  renderer.h  shader.h  surface.h  vertex-buffer.h
include/platform/: platform-constants.h  platform.h
resources/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  config.cpp  logger.cpp
src/engine/: CMakeLists.txt  engine.cpp  material.cpp  mesh-component.cpp  mesh.cpp  scene-navigator.cpp  scene-renderer.cpp  texture.cpp
src/gfx/: CMakeLists.txt  command-buffer.cpp  draw-command.cpp  gfx-buffer.cpp  gfx-constants.cpp  gfx-features.cpp  gfx-pipeline.cpp  gfx.cpp  image.cpp  render-target.cpp  renderer.cpp  shader.cpp  surface.cpp  vertex-buffer.cpp
src/gfx/inc/: command-buffer-private.h  draw-command-private.h  gfx-buffer-private.h  gfx-constants-private.h  gfx-pipeline-private.h  gfx-private.h  image-private.h  render-target-private.h  renderer-private.h  shader-private.h  surface-private.h  vertex-buffer-private.h
src/inc/: platform-private.h  window-private.h
src/platform/: CMakeLists.txt  platform.cpp
src/platform/inc/: platform.inc  window-private.h
src/shader/: CMakeLists.txt
src/shader/dynamic/: CMakeLists.txt  simple.frag  simple.vert
src/shader/static/: CMakeLists.txt  gizmos.frag  gizmos.vert  grid.frag  grid.vert  simple.frag  simple.vert  sky.frag  sky.vert
test/: CMakeLists.txt
test/common/: CMakeLists.txt  common-test.cpp
test/engine/: CMakeLists.txt  gfx-engine-test.cpp
test/gfx/: CMakeLists.txt  gfx-test.cpp  image.inc
test/platform/: CMakeLists.txt  platform-test.cpp
test/resources/: frag.inc  grid.frag.inc  grid.vert.inc  model.inc  simple.frag.inc  vert.inc
tools/: chessboard.py  import_or_install.py  pack_binary.py  useful_templates.txt  uv_map.py
